@@ -5,7 +5,7 @@
 # of which can be found in the main directory of this project.
 Gentoo Linux Installer
 
-$Id: GLIArchitectureTemplate.py,v 1.226 2005/11/08 04:09:26 agaffney Exp $
+$Id: GLIArchitectureTemplate.py,v 1.227 2005/11/08 04:24:07 agaffney Exp $
 
 The ArchitectureTemplate is largely meant to be an abstract class and an 
 interface (yes, it is both at the same time!). The purpose of this is to create 
@@ -174,6 +174,10 @@ class ArchitectureTemplate:
 			GLIUtility.spawn("echo " + res.group(1) + " >> " + self._chroot_dir + "/var/lib/portage/world")
 
 	def copy_pkg_to_chroot(self, package):
+		symlinks = { '/bin/': '/mnt/livecd/bin/', '/boot/': '/mnt/livecd/boot/', '/lib/': '/mnt/livecd/lib/', 
+		             '/opt/': '/mnt/livecd/opt/', '/sbin/': '/mnt/livecd/sbin/', '/usr/': '/mnt/livecd/usr/',
+		             '/etc/gconf/': '/usr/livecd/gconf/' }
+
 		# Copy the vdb entry for the package from the LiveCD to the chroot
 		if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): copying vdb entry for " + package)
 		if not GLIUtility.exitsuccess(GLIUtility.spawn("mkdir -p " + self._chroot_dir + "/var/db/pkg/" + package + " && cp -a /var/db/pkg/" + package + "/* " + self._chroot_dir + "/var/db/pkg/" + package)):
@@ -186,9 +190,10 @@ class ArchitectureTemplate:
 			tarfiles = open("/tmp/tarfilelist", "w")
 			for entry in entries:
 				parts = entry.split(" ")
-				# Hack for /etc/gconf being a symlink
-				if parts[0].startswith("/etc/gconf/"):
-					parts[0] = "/usr/livecd/gconf/" + parts[11:]
+				# Hack for symlink crappiness
+				for symlink in symlinks:
+					if parts[0].startswith(symlink):
+						parts[0] = symlinks[symlink] + parts[len(symlink):]
 				tarfiles.write(parts[0] + "\n")
 			tarfiles.close()
 		except:
@@ -201,11 +206,13 @@ class ArchitectureTemplate:
 		if not GLIUtility.exitsuccess(GLIUtility.spawn("mkdir -p " + self._chroot_dir + image_dir + " && tar -c --files-from=/tmp/tarfilelist --no-recursion 2>/dev/null | tar -C " + self._chroot_dir + image_dir + " -x")):
 			raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not execute tar for " + package)
 
-		# Check for existance of /usr/livecd/gconf/ in image_dir and change to /etc/gconf/
-		if GLIUtility.is_file(self._chroot_dir + image_dir + "/usr/livecd/gconf/"):
-			if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): fixing /usr/livecd/gconf/ stuff in " + image_dir + " for " + package)
-			if not GLIUtility.exitsuccess(GLIUtility.spawn("mv " + self._chroot_dir + image_dir + "/usr/livecd/gconf " + self._chroot_dir + image_dir + "/etc/gconf")):
-				raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not fix /usr/livecd/gconf/ stuff for " + package)
+		# More symlink crappiness hacks
+		for symlink in symlinks:
+			if GLIUtility.is_file(self._chroot_dir + image_dir + symlinks[symlink]):
+#				parts[0] = symlinks[symlink] + parts[len(symlink):]
+				if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): fixing /usr/livecd/gconf/ stuff in " + image_dir + " for " + package)
+				if not GLIUtility.exitsuccess(GLIUtility.spawn("mv " + self._chroot_dir + image_dir + symlinks[symlink] + " " + self._chroot_dir + image_dir + symlink)):
+					raise GLIException("CopyPackageToChrootError", 'fatal', 'copy_pkg_to_chroot', "Could not fix /usr/livecd/gconf/ stuff for " + package)
 
 		# Run pkg_setup
 		if self._debug: self._logger.log("DEBUG: copy_pkg_to_chroot(): running pkg_setup for " + package)
