@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.472 2005/11/08 04:09:26 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.473 2005/11/08 04:24:07 agaffney Exp $
 
 *GLI-0.3 (27 Oct 2005)
 
@@ -18,6 +18,7 @@
   replace preinst, copy, postinst, rm steps with qmerge
   whoops...that shouldn't have been commented out
   create image_dir with -p in copy_pkg_to_chroot()
+  more generic of symlink crappiness
 
   6 Nov 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/GLIStorageDevice.py:
